[GTK][EFL] imported/w3c/web-platform-tests/fetch/api/basic/accept-header.html is failing https://bugs.webkit.org/show_bug.cgi?id=162547

Patch by Youenn Fablet <youenn@apple.com> on 2016-09-26
Reviewed by Carlos Garcia Campos.

Covered by LayoutTests/imported/w3c/web-platform-tests/fetch/api/basic/accept-header.html now passing.

* platform/network/soup/SoupNetworkSession.cpp:
(WebCore::SoupNetworkSession::createTestingSession): Setting a default Accept-Language value.

Canonical link: https://commits.webkit.org/180510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206387 268f45cc-cd09-0410-ab3c-d52691b4dbfc