Source/WebCore/platform/network/soup/SoupNetworkSession.cpp
@@ -63,8 +63,11 @@ std::unique_ptr<SoupNetworkSession> SoupNetworkSession::createPrivateBrowsingSes
 
 std::unique_ptr<SoupNetworkSession> SoupNetworkSession::createTestingSession()
 {
-    GRefPtr<SoupCookieJar> cookieJar = adoptGRef(createPrivateBrowsingCookieJar());
-    return std::unique_ptr<SoupNetworkSession>(new SoupNetworkSession(cookieJar.get()));
+    auto cookieJar = adoptGRef(createPrivateBrowsingCookieJar());
+    auto newSoupSession = std::unique_ptr<SoupNetworkSession>(new SoupNetworkSession(cookieJar.get()));
+    // FIXME: Creating a testing session is losing soup session values set when initializing the network process.
+    g_object_set(newSoupSession.get(), "accept-language", "en-us", nullptr);
+    return newSoupSession;
 }
 
 std::unique_ptr<SoupNetworkSession> SoupNetworkSession::createForSoupSession(SoupSession* soupSession)
